# sidekick

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.full  Dockerfile.server  README.md  docker-compose.full.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-server.yml  docs.yml  publish-sdks.yml  release-docker.yml  release-sdk-browser.yml  release-sdk-flutter.yml  release-sdk-nodejs.yml  release-sdk-react-native.yml
core/: Cargo.toml
core/src/: evaluator.rs  hashing.rs  store.rs
dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: Layout.tsx  RuleEditor.tsx
dashboard/src/pages/: FlagEditor.tsx  FlagList.tsx  Settings.tsx
docker/: entrypoint-full.sh
docs/: api-reference.md  index.md  package.json  self-hosting.md
docs/.vitepress/: config.ts
docs/guide/: architecture.md  concepts.md  getting-started.md  what-is-sidekick.md
docs/sdks/: browser.md  flutter.md  nodejs.md  react-native.md
sdks/browser/: Cargo.toml  package.json
sdks/browser/src/: lib.rs
sdks/flutter/: Cargo.toml
sdks/flutter/dart/: pubspec.yaml  sidekick_bindings.dart  sidekick_flutter.dart
sdks/flutter/src/: lib.rs
sdks/nodejs/: Cargo.toml  index.d.ts  index.js  index.node  package-lock.json  package.json
sdks/nodejs/src/: lib.rs
sdks/react-native/: Cargo.toml  index.js  package.json
sdks/react-native/cpp/: SidekickJSI.cpp  (+1 more)
server/: Cargo.toml
server/src/: api.rs  auth.rs  main.rs  rate_limit.rs  state.rs  stream.rs
server/src/api/: flags.rs
(+1 files in other folders)
