[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
futures-util = "0.3.32"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sidekick-core = { version = "0.1.0", path = "../core" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
